feat: API v1.4 - исправления ошибок, Service Posts API и полная документация
